# lltrade

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: NOTES.md  PROGRESS.md  SPEC.md  _config.yml  index.md
src/lltrade/: __init__.py
tests/: test_smoke.py
